--- a/Manning.css
+++ b/Manning.css
@@ -15,7 +15,7 @@ li {
 
 body {
   /*background: url("Rule.jpg") 80% 0 no-repeat center fixed;*/
-  background: url(river.jpeg) 60% 0 repeat-y fixed;
+  /*background: url(river.jpeg) 60% 0 repeat-y fixed;*/
   background-position:center;
   background-color: #cccccc;
   margin: 10%;
@@ -79,5 +79,3 @@ hr {
   border-style: inset;
   border-width: 2px;
 }
-
-
